[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.2"
poem-openapi = { version = "1.2", features = ["swagger-ui"] }
poem-grpc = { version = "0.2.23", features = ["serde", "serde_json"] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
