[package]
name = "grpc-helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.2"
poem-openapi = { version = "1.2", features = ["swagger-ui"] }
poem-grpc = { version = "0.2.23", features = ["serde", "serde_json"] }
prost = "0.11.0"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tokio-stream = "0.1.14"
log = "0.4.20"
env_logger = "0.10.0"
async-stream = "0.3.5"

[build-dependencies]
poem-grpc-build = "0.2.21"

[[bin]]
name = "grpc-helloworld-client"
path = "src/client.rs"
